# oidc-auth-client

./: .gitignore  LICENSE  README.md  pyproject.toml
src/oidc_auth_client/: __init__.py  cli.py  client.py
src/oidc_auth_client/strategies/: __init__.py  base.py  egi.py  simple.py
